# wsi-deidentifier

./: .cursorrules  .gitignore  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.debug  LICENSE  README.md  README_DOCKER.md  debug_docker.sh  deidentify.py  docker_test.py  explore_svs.py  find_identifying_boxes.py  gcp_ocr_annotate.py  gcp_textract.py  gemini_extract.py  gemini_extract_debug.py  gemini_extract_tissue.py  hash_mapping.csv  identify_boxes.py  interactive_annotator.py  pdf_processor.py  pyproject.toml  reidentify.py  reorganize_package.sh  replace_label.py  replace_macro.py  run_wsi_identifier.sh  server.py  setup.py  start.sh  test_docker.sh  test_gcp_docker.sh  test_pdf.py  test_replace_macro.py  tiffparser.py  view_macro_image.py
.github/workflows/: tests.yml
jobs/: extract_ids.py  extract_labels.py  rename_files.py  viewer.py
macro_annotations/: 46fb5bc8c58e29a299f680fc81a2e79e7deb40f3a5fd589ebc413dbd4675d2df_annotations.json  5718e29557f3e2e6fa2e5751ea76e25e029444359b21749546767b994abbe33d_annotations.json  ab07ff79586552d412c49299fbcf6af84e6798e87ca82c15fd4963a8253f0360_annotations.json  ed0d9a6d7386e9c905782602dc3c99f0ec050920e602b0dd5a52c150e1010068_annotations.json
nextjs/: next.config.ts  package.json
nextjs/src/app/: layout.tsx  page.tsx  providers.tsx
nextjs/src/components/: SlideAnnotator.tsx  SlideAnnotatorNoSSR.tsx
nextjs/src/lib/api-client/: sdk.gen.ts  types.gen.ts
nextjs/src/lib/api-client/@tanstack/: react-query.gen.ts
pyodide/: index.html  main.js
scripts/: build.sh
tests/: test_deidentify_cli.py  test_load_macro.py  test_pyodide.py  test_replace_macro.py  test_strip_images.py
web/: package.json  tsconfig.json
web/scripts/: openapi-gen.sh
web/src/: App.tsx  frontend.tsx
web/src/components/: SlideAnnotator.tsx
web/src/components/ui/: form.tsx
web/src/lib/api-client/: sdk.gen.ts  types.gen.ts
web/src/lib/api-client/@tanstack/: react-query.gen.ts
wsi_deidentifier/: __init__.py
