[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-deidentifier"
version = "0.1.0"
description = "Tool to deidentify whole slide images by removing PHI"
readme = "README.md"
authors = [{ name = "Lawrence Chen", email = "lawrencechan27@gmail.com" }]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3.10"]
requires-python = ">=3.10"
dependencies = [
  "click",
  "numpy",
  "Pillow",
  "opencv-python",
  "openslide-python",
  "openslide-bin",
  "pyzbar",
  "pylibdmtx",
  "tifffile",
  "pytesseract",
  "azure-storage-blob",
  "fastapi",
  "uvicorn",
]

[project.scripts]
wsi-deidentifier = "wsi_deidentifier.deidentify:main"

[tool.setuptools]
packages = ["wsi_deidentifier"]

[tool.uv]
